LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/Ambassador_Activity__c.object-meta.xml
<CustomObject>
    <description>Activities performed by FQ Ambassadors</description>
    <label>Ambassador Activity</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ambassador Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>