LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Contact__r.AccountId ,  Account_Name__c ,&quot;_blank&quot;)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>