LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Hidden field used in email template.</description>
    <formula>Contact__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>