LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>Activities performed by ambassadors.</description>
    <inlineHelpText>What is the activity performed by the ambassador? Their reward will be displayed automatically.</inlineHelpText>
    <label>Activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ambassador_Activities</valueSetName>
    </valueSet>
</CustomField>