LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Activity_Complete__c.field-meta.xml
<CustomField>
    <fullName>Activity_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the contact will get credit and their rating will be adjusted accordingly.</inlineHelpText>
    <label>Activity Complete</label>
    <type>Checkbox</type>
</CustomField>