LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Activity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Activity_Rating__c</fullName>
    <label>Activity Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>