LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Actual_Reward__c.field-meta.xml
<CustomField>
    <fullName>Actual_Reward__c</fullName>
    <inlineHelpText>What is the actual ambassador reward?</inlineHelpText>
    <label>Actual Reward</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ambassador_Reward</valueSetName>
    </valueSet>
</CustomField>