LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ambassador Activities</relationshipLabel>
    <relationshipName>Ambassador_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>