LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Date_Reward_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Reward_Sent__c</fullName>
    <inlineHelpText>When was the reward sent to the customer?</inlineHelpText>
    <label>Date Reward Sent</label>
    <type>Date</type>
</CustomField>