LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Primary_FQ_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primary_FQ_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the FloQast employee who initiated the conversation?</inlineHelpText>
    <label>Primary FQ Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ambassador_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>