LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Referred_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required field if the activity is customer referral.</inlineHelpText>
    <label>Referred Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ambassador Activities</relationshipLabel>
    <relationshipName>Ambassador_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>