LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Referred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required field if the activity is customer referral.</inlineHelpText>
    <label>Referred Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ambassador Activities (Referred Contact)</relationshipLabel>
    <relationshipName>Ambassador_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>