LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Reward_Details__c.field-meta.xml
<CustomField>
    <fullName>Reward_Details__c</fullName>
    <description>Required field for the &apos;Actual Reward&apos;</description>
    <inlineHelpText>Please provide reward details.</inlineHelpText>
    <label>Reward Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>