LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Reward_Options__c.field-meta.xml
<CustomField>
    <fullName>Reward_Options__c</fullName>
    <label>Reward Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Actual_Reward__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon Gift Card - $25</fullName>
            </value>
            <value>
                <fullName>Amazon Gift Card - $100</fullName>
            </value>
            <value>
                <fullName>Amazon Gift Card - $200</fullName>
            </value>
            <value>
                <fullName>FQ Patagonia Jacket</fullName>
            </value>
            <value>
                <fullName>Other - $25</fullName>
            </value>
            <value>
                <fullName>Other - $100</fullName>
            </value>
            <value>
                <fullName>Other - $200</fullName>
            </value>
            <value>
                <fullName>2% Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>