LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Secondary_FQ_Lead__c.field-meta.xml
<CustomField>
    <fullName>Secondary_FQ_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the FloQast employee who helped execute the activity?</inlineHelpText>
    <label>Secondary FQ Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ambassador_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>