LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/fields/Suggested_Reward__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Reward__c</fullName>
    <formula>CASE( TEXT(Activity__c) , 
&quot;Prospect Reference Call&quot;, &quot;$25 value reward&quot;, 
&quot;Customer Quote Card&quot;, &quot;$25 value reward&quot;,
&quot;Peer-to-Peer Review&quot;,&quot;$25 value reward&quot;,
&quot;New Product Testing&quot;, &quot;$25 value reward&quot;,
&quot;Video Interview&quot;,&quot;$100 value reward&quot;,
&quot;Conference Panel&quot;,&quot;$100 value reward&quot;,
&quot;Webinar&quot;,&quot;$100 value reward&quot;,
&quot;Case Study&quot;,&quot;$200 value reward&quot;, 
&quot;FQ/Company Press Release&quot;,&quot;$200 value reward&quot;, 
&quot;Customer Referral&quot;,&quot;$500 check&quot;,
NULL)</formula>
    <inlineHelpText>This is a suggested reward based on their activity.</inlineHelpText>
    <label>Suggested Reward</label>
    <type>Text</type>
</CustomField>