LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/validationRules/Complete_Date_Required_FIELD.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Date_Required_FIELD</fullName>
    <active>true</active>
    <description>Complete Date is required on activity completed.</description>
    <errorConditionFormula>Activity_Complete__c &amp;&amp;  ISBLANK( Activity_Date__c )</errorConditionFormula>
    <errorDisplayField>Activity_Date__c</errorDisplayField>
    <errorMessage>Please provide date when the activity was completed.</errorMessage>
</ValidationRule>