LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/validationRules/Primary_Lead_Required_FIELD.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Lead_Required_FIELD</fullName>
    <active>true</active>
    <description>Primary Lead is required on activity completed.</description>
    <errorConditionFormula>Activity_Complete__c &amp;&amp;  ISBLANK(Primary_FQ_Lead__c)</errorConditionFormula>
    <errorDisplayField>Primary_FQ_Lead__c</errorDisplayField>
    <errorMessage>Primary lead is required for a completed activity.</errorMessage>
</ValidationRule>