LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/validationRules/Primary_Lead_Required_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Lead_Required_TOP</fullName>
    <active>true</active>
    <description>Primary Lead is required on activity completed.</description>
    <errorConditionFormula>Activity_Complete__c &amp;&amp;  ISBLANK(Primary_FQ_Lead__c)</errorConditionFormula>
    <errorMessage>Primary lead is required for a completed activity.</errorMessage>
</ValidationRule>