LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/validationRules/Required_Referred_Account_Contact_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Referred_Account_Contact_TOP</fullName>
    <active>true</active>
    <description>Account and Contact are required if the activity is customer referral.</description>
    <errorConditionFormula>ISPICKVAL( Activity__c , &quot;Customer Referral&quot;) 
&amp;&amp;  
(
ISBLANK( Referred_Account__c )
||  ISBLANK( Referred_Account__c )
)</errorConditionFormula>
    <errorMessage>Both referred account and contact are required if the activity is customer referral.</errorMessage>
</ValidationRule>