LWCLearnwithFLOWOrg/force-app/main/default/objects/Ambassador_Activity__c/validationRules/Reward_Description_Required_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Reward_Description_Required_TOP</fullName>
    <active>true</active>
    <description>When an actual award is chosen, additional information is required.</description>
    <errorConditionFormula>NOT(ISBLANK( TEXT(Actual_Reward__c) ) ) &amp;&amp;  ISBLANK(Reward_Details__c) 
&amp;&amp; TEXT(Actual_Reward__c)  &lt;&gt; Suggested_Reward__c</errorConditionFormula>
    <errorMessage>Please provide details for choosing a different reward from the suggested reward.</errorMessage>
</ValidationRule>